--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "socket": "node src/socket/server"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
-    "popper.js": "^1.16.1",
     "sass-loader": "^10.1.1",
     "socket.io": "^4.0.0",
     "socket.io-client": "^4.0.0",
+    "v-viewer": "^1.5.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
